--- a/cloud-budget/package.json
+++ b/cloud-budget/package.json
@@ -4,27 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prod": "NODE_ENV=production webpack --config ./webpack.config.js --mode=production",
     "build": "webpack -d",
-    "prod": "webpack -p",
-    "start": "webpack-dev-server --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --open"
   },
   "author": "Max Voronin",
   "license": "ISC",
-  "homepage": "https://github.com/Limas94/webpack-config-site",
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.1",
     "file-loader": "^6.0.0",
     "handlebars": "^4.7.6",
     "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^4.0.4",
-    "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
