--- a/CloudBudget/package.json
+++ b/CloudBudget/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "reset-css": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
